--- a/public/css/main.css
+++ b/public/css/main.css
@@ -761,6 +761,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-nav .nav-links li a {
+  font-weight: bold;
   color: #fefffe;
   display: block;
   text-decoration: none;
